🎉auto update by Gmeek action

--- a/backup/深度学习中项目的安装方式.md
+++ b/backup/深度学习中项目的安装方式.md
@@ -22,7 +22,7 @@ pip install -r requirements.txt（从文件批量安装依赖）
 会显示构建过程的详细信息（编译、依赖解析、安装路径等）。
 没有 . 的话，它会去 PyPI 或你指定的源找包。
 常用场景：调试安装问题，查看构建细节。
- **pip install -e**
+ **pip install -e .**
 含义：-e 表示 editable mode（**可编辑模式**）。
 安装模式：可编辑。
 行为：
