🎉auto update by Gmeek action

--- a/backup/深度学习中项目的安装方式.md
+++ b/backup/深度学习中项目的安装方式.md
@@ -23,7 +23,7 @@ pip install -r requirements.txt（从文件批量安装依赖）
 没有 . 的话，它会去 PyPI 或你指定的源找包。
 常用场景：调试安装问题，查看构建细节。
  **pip install -e .**
-含义：-e 表示 editable mode（**可编辑模式**）。
+含义：-e 表示 editable mode（**可编辑模式**），它需要一个路径参数，所以一般加 .（表示当前目录）。
 安装模式：可编辑。
 行为：
 在 site-packages 里放一个指向源码目录的**符号链接**（或 .pth 文件）。
