🎉auto update by Gmeek action

--- a/backup/镜像云备份（持续更新）.md
+++ b/backup/镜像云备份（持续更新）.md
@@ -7,3 +7,5 @@ http://pypi.douban.com/simple/
 
 当更新完.condarc文件时无效，可以查查是不是设置了全局的pip
 全局pip一般地址：C:\Users\用户名\AppData\Roaming\pip
+**conda和pip的镜像源不是一个，两个是不相干的部分。
+如果pip下载很慢的时候需要更换本机pip的镜像源，不然就是默认的。**
